--- a/Mytheme.html
+++ b/Mytheme.html
@@ -81,7 +81,7 @@
 			<!--  =======   About Image Starts   =======  -->
 
 			<div class="aboutImage">
-				<img src="Images/aboutme.jpg">
+				<img src="aboutme.jpg">
 			</div>
 
 			<!--  =======   About Image Ends   =======  -->
