--- a/Mytheme.html
+++ b/Mytheme.html
@@ -71,7 +71,30 @@
 	</section>
 
 	<!--  *******   Home Section Ends   *******  -->
+	<!--  =======   Menu Starts   =======  -->
 
+		<nav class="primaryMenu">
+			
+			<div class="logo">
+				<a href="#">MyTheme</a>
+			</div>
+
+			<ul>
+				<li><a href="#sectionHome">Home</a></li>
+				<li><a href="#sectionAbout">About</a></li>
+				<li><a href="#sectionPortfolio">Works</a></li>
+				<li><a href="#sectionContact">Contact</a></li>
+			</ul>
+
+			<div id="primaryMenuBtn">
+				<div class="bar"></div>
+				<div class="bar"></div>
+				<div class="bar"></div>
+			</div>
+
+		</nav>
+
+		<!--  =======   Menu Ends   =======  -->
 
 	<!--  *******   About Section Starts   *******  -->
 
@@ -90,7 +113,7 @@
 
 			<div class="aboutInfo">
 				<h1>About Me</h1>
-				<h2>Computer Science Student</h2>
+				<h2>Rjanna Miki M. Balaybay</h2>
 				<p>Having participated several leadership program I am confident with my communication skills. Subsequently, I am able to gain various certificates by participating in competitions and being able to maintain decent grades from elementary when I was studying in Puguis Elementary School until I graduated senior high school in Cordillera Regional Science High School (CRSHS). Currently I am honing myself to become an innovative Software Engineer by studying computer science in the University of the Cordilleras.</p>
 				<div class="aboutPersonalInfo">
 					<div><span>Name:</span><span></span>Rjanna Miki M. Balaybay</span></div>
