--- a/Mytheme.html
+++ b/Mytheme.html
@@ -73,7 +73,7 @@
 	<!--  *******   Home Section Ends   *******  -->
 	<!--  =======   Menu Starts   =======  -->
 
-		<nav class="primaryMenu">
+		<nav class="primaryMenu2">
 			
 			<div class="logo">
 				<a href="#">MyTheme</a>
