--- a/Mytheme.html
+++ b/Mytheme.html
@@ -69,7 +69,7 @@
 			<!--  =======   About Image Starts   =======  -->
 
 			<div class="aboutImage">
-				<img src="aboutme.jpg">
+				<img src="Prof4.jpg">
 			</div>
 
 			<!--  =======   About Image Ends   =======  -->
@@ -157,37 +157,67 @@
 				
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<img src="Images/design1.jpg">
+						<img src="Elem.jpg">
+						<div class="overlay">
+							<div class="content">
+								<h7>The End of My Childhood: A Proof!</h7>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<img src="Images/design2.jpg">
+						<img src="Junior.jpg">
+						<div class="overlay">
+							<div class="content">
+								<h7>Half of My Junior Year!</h7>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="Images/website1.jpg">
+						<img src="Senior.jpg">
+						<div class="overlay">
+							<div class="content">
+								<h7>A Paper Made from Hard Work!</h7>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="Images/website2.jpg">
+						<img src="Mom.jpg">
+						<div class="overlay">
+							<div class="content">
+								<h7>Hugging the Light of our Home!</h7>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="Images/website3.jpg">
+						<img src="Dad.jpg">
+						<div class="overlay">
+							<div class="content">
+								<h7>Shook Hands Half Across the World with My Father!</h7>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card" data-item="logo">
 					<div class="imgBox">
-						<img src="Images/logo1.jpg">
+						<img src="Sir.jpg">
+						<div class="overlay">
+							<div class="content">
+								<h7>A Guiding Light!</h7>
+							</div>
+						</div>
 					</div>
 				</div>
 
