--- a/Mytheme.html
+++ b/Mytheme.html
@@ -69,7 +69,7 @@
 			<!--  =======   About Image Starts   =======  -->
 
 			<div class="aboutImage">
-				<img src="Prof4.jpg">
+				<img src="/CC1 Portfolio/Prof4.jpg">
 			</div>
 
 			<!--  =======   About Image Ends   =======  -->
@@ -179,7 +179,7 @@
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Senior.jpg">
+						<img src="/CC1 Portfolio/Senior.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>A Paper Made from Hard Work!</h7>
