--- a/Mytheme.html
+++ b/Mytheme.html
@@ -69,7 +69,7 @@
 			<!--  =======   About Image Starts   =======  -->
 
 			<div class="aboutImage">
-				<img src="/CC1 Portfolio/Prof4.jpg">
+				<img src="CC1 Portfolio/Prof4.jpg">
 			</div>
 
 			<!--  =======   About Image Ends   =======  -->
@@ -157,7 +157,7 @@
 				
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<img src="/CC1 Portfolio/Elem.jpg">
+						<img src="CC1 Portfolio/Elem.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>The End of My Childhood: A Proof!</h7>
@@ -168,7 +168,7 @@
 
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<img src="/CC1 Portfolio/Junior.jpg">
+						<img src="CC1 Portfolio/Junior.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>Half of My Junior Year!</h7>
@@ -179,7 +179,7 @@
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="/CC1 Portfolio/Senior.jpg">
+						<img src="CC1 Portfolio/Senior.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>A Paper Made from Hard Work!</h7>
@@ -190,7 +190,7 @@
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="/CC1 Portfolio/Mom.jpg">
+						<img src="CC1 Portfolio/Mom.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>Hugging the Light of our Home!</h7>
@@ -201,7 +201,7 @@
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="/CC1 Portfolio/Dad.jpg">
+						<img src="CC1 Portfolio/Dad.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>Shook Hands Half Across the World with My Father!</h7>
@@ -212,7 +212,7 @@
 
 				<div class="card" data-item="logo">
 					<div class="imgBox">
-						<img src="/CC1 Portfolio/Sir.jpg">
+						<img src="CC1 Portfolio/Sir.jpg">
 						<div class="overlay">
 							<div class="content">
 								<h7>A Guiding Light!</h7>
