--- a/Mytheme.html
+++ b/Mytheme.html
@@ -81,11 +81,12 @@
 				<h2>Rjanna Miki M. Balaybay</h2>
 				<p>Having participated several leadership program I am confident with my communication skills. Subsequently, I am able to gain various certificates by participating in competitions and being able to maintain decent grades from elementary when I was studying in Puguis Elementary School until I graduated senior high school in Cordillera Regional Science High School (CRSHS). Currently I am honing myself to become an innovative Software Engineer by studying computer science in the University of the Cordilleras.</p>
 				<div class="aboutPersonalInfo">
-					<div><span>Name:</span><span></span>Rjanna Miki M. Balaybay</span></div>
-					<div><span>Birth date:</span><span></span>January 18,2005</span></div>
+					<div><span>Phone number:</span><span></span>+639075586719</span></div>
 					<div><span>Email:</span><span></span>balaybayrjanna@gmail.com</span></div>
 					<div><span>Address:</span><span></span>MB88-C Buhao, Puguis, La trinidad, Benguet</span></div>
-                    <div><span>Website:</span><span></span>cranberry101.github.io/Portfolio/Mytheme.html</span></div>
+					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html/"target="_blank" >
+						<div><span>Website:</span><span></span>cranberry101.github.io/Portfolio/Mytheme.html</span></div>
+					</a>
                 </div>
 			</div>
 
