--- a/Mytheme.html
+++ b/Mytheme.html
@@ -84,7 +84,7 @@
 					<div><span>Phone number:</span><span></span>+639075586719</span></div>
 					<div><span>Email:</span><span></span>balaybayrjanna@gmail.com</span></div>
 					<div><span>Address:</span><span></span>MB88-C Buhao, Puguis, La trinidad, Benguet</span></div>
-					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html/"target="_blank" >
+					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html/"target="_blank" ><box-icon name='world' ></box-icon>
 						<div><span>Website:</span><span></span>cranberry101.github.io/Portfolio/Mytheme.html</span></div>
 					</a>
                 </div>
