--- a/Mytheme.html
+++ b/Mytheme.html
@@ -29,7 +29,7 @@
                 <nav class="navbar">
                   <a href="#sectionHome" class="active">Home</a>
                   <a href="#sectionAbout">About Me</a>
-                  <a href= "#sectionPortfolio">Education</a>
+                  <a href= "#sectionPortfolio">Milestones</a>
                   <a href="#sectionContact">Contacts</a>
                 </nav>
               </header>
