--- a/Mytheme.html
+++ b/Mytheme.html
@@ -69,7 +69,7 @@
 			<!--  =======   About Image Starts   =======  -->
 
 			<div class="aboutImage">
-				<img src="CC1 Portfolio/Prof4.jpg">
+				<img src="Prof1.jpg">
 			</div>
 
 			<!--  =======   About Image Ends   =======  -->
