--- a/Mytheme.html
+++ b/Mytheme.html
@@ -158,45 +158,53 @@
 				
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Elem.jpg">
-						<div class="overlay">
-							<div class="content">
-								<h7>The End of My Childhood: A Proof!</h7>
+						<a href ="https://rjannamiki.blogspot.com/2023/09/graduated-with-honors-during-elementary.html">
+							<img src="CC1 Portfolio/Elem.jpg">
+							<div class="overlay">
+								<div class="content">
+									<h7>The End of My Childhood: A Proof!</h7>
 							</div>
 						</div>
+					</a>
 					</div>
 				</div>
 
 				<div class="card" data-item="design">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Junior.jpg">
-						<div class="overlay">
-							<div class="content">
-								<h7>Half of My Junior Year!</h7>
+						<a href ="https://rjannamiki.blogspot.com/2023/09/graduated-junior-high-school-in-ccdc.html">
+							<img src="CC1 Portfolio/Junior.jpg">
+							<div class="overlay">
+								<div class="content">
+									<h7>Half of My Junior Year!</h7>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Senior.jpg">
-						<div class="overlay">
-							<div class="content">
-								<h7>A Paper Made from Hard Work!</h7>
+						<a href ="https://rjannamiki.blogspot.com/2023/09/a-senior-high-school-graduate-from-crshs.html">
+							<img src="CC1 Portfolio/Senior.jpg">
+							<div class="overlay">
+								<div class="content">
+									<h7>A Paper Made from Hard Work!</h7>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Mom.jpg">
-						<div class="overlay">
-							<div class="content">
-								<h7>Hugging the Light of our Home!</h7>
+						<a href ="https://rjannamiki.blogspot.com/2023/09/hugging-light-of-our-home.html">
+							<img src="CC1 Portfolio/Mom.jpg">
+							<div class="overlay">
+								<div class="content">
+									<h7>Hugging the Light of our Home!</h7>
 							</div>
 						</div>
+						</a>
 					</div>
 				</div>
 
@@ -213,12 +221,14 @@
 
 				<div class="card" data-item="logo">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Sir.jpg">
-						<div class="overlay">
-							<div class="content">
-								<h7>A Guiding Light!</h7>
+						<a href ="https://rjannamiki.blogspot.com/2023/09/meeting-one-of-schools-prodigy.html">
+							<img src="CC1 Portfolio/Sir.jpg">
+							<div class="overlay">
+								<div class="content">
+									<h7>A Guiding Light!</h7>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 
