--- a/Mytheme.html
+++ b/Mytheme.html
@@ -210,12 +210,14 @@
 
 				<div class="card" data-item="development">
 					<div class="imgBox">
-						<img src="CC1 Portfolio/Dad.jpg">
-						<div class="overlay">
-							<div class="content">
-								<h7>Shook Hands Half Across the World with My Father!</h7>
+						<a href ="https://rjannamiki.blogspot.com/2023/09/shook-hands-half-across-world-with-my.html">
+							<img src="CC1 Portfolio/Dad.jpg">
+							<div class="overlay">
+								<div class="content">
+									<h7>Shook Hands Half Across the World with My Father!</h7>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 
