--- a/Mytheme.html
+++ b/Mytheme.html
@@ -27,7 +27,7 @@
             <header class="header">
                 <a href="#" class="logo"> MyThemePortfolio </a>
                 <nav class="navbar">
-                  <a href="#sectionHome" class="active">Home</a>
+                  <a href="#sectionHome" >Home</a>
                   <a href="#sectionAbout">About Me</a>
                   <a href= "#sectionPortfolio">Milestones</a>
                   <a href="#sectionContact">Contacts</a>
@@ -83,7 +83,10 @@
 				<div class="aboutPersonalInfo">
 					<div><span>Phone number:</span><span></span>+639075586719</span></div>
 					<div><span>Email:</span><span></span>balaybayrjanna@gmail.com</span></div>
-					<div><span>Address:</span><span></span>MB88-C Buhao, Puguis, La trinidad, Benguet</span></div>
+					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html"target="_blank" >
+						<div><span>Facebook Messenger:</span><span></span>https://www.facebook.com/rjannamiki.balaybay/</span></div>
+					</a>
+					
 					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html"target="_blank" >
 						<div><span>Website:</span><span></span>cranberry101.github.io/Portfolio/Mytheme.html</span></div>
 					</a>
