--- a/Mytheme.html
+++ b/Mytheme.html
@@ -269,7 +269,7 @@
 				
 				<div class="contactTitle">
 					<h2>Get In Touch</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+					<p>Below are my contact details. Feel free to contact me.</p>
 				</div>
 
 				<div class="contactInfo">
@@ -280,7 +280,7 @@
 						</div>
 						<div class="details">
 							<span>Phone</span>
-							<span>+00 110 111 00</span>
+							<span>+6309075586719</span>
 						</div>
 					</div>
 
@@ -290,7 +290,7 @@
 						</div>
 						<div class="details">
 							<span>Email</span>
-							<span>name.tutorial@gmail.com</span>
+							<span>balaybayrjanna@gmail.com</span>
 						</div>
 					</div>
 
@@ -300,14 +300,14 @@
 						</div>
 						<div class="details">
 							<span>Location</span>
-							<span>X Street, Y Road, XYZ State Name</span>
+							<span>MB 88-C Buhao Puguis, La Trinidad, Benguet 2601</span>
 						</div>
 					</div>
 
 				</div>
 
 				<div class="contactSocialMedia">
-					<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+					<a href="#"><i class="fa-brands fa-facebook-f"><a href ="https://www.facebook.com/rjannamiki.balaybay/"target="_blank" ></i></a></i></a>
 					<a href="#"><i class="fa-brands fa-twitter"></i></a>
 					<a href="#"><i class="fa-brands fa-instagram"></i></a>
 					<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
