--- a/Mytheme.html
+++ b/Mytheme.html
@@ -307,7 +307,7 @@
 				</div>
 
 				<div class="contactSocialMedia">
-					<a href="#"><i class="fa-brands fa-facebook-f"><a href ="https://www.facebook.com/rjannamiki.balaybay/"target="_blank" ></i></a></i></a>
+					<a href="https://www.facebook.com/rjannamiki.balaybay/"target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
 					<a href="#"><i class="fa-brands fa-twitter"></i></a>
 					<a href="#"><i class="fa-brands fa-instagram"></i></a>
 					<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
