--- a/Mytheme.html
+++ b/Mytheme.html
@@ -83,8 +83,8 @@
 				<div class="aboutPersonalInfo">
 					<div><span>Phone number:</span><span></span>+639075586719</span></div>
 					<div><span>Email:</span><span></span>balaybayrjanna@gmail.com</span></div>
-					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html"target="_blank" >
-						<div><span>Facebook Messenger:</span><span></span>https://www.facebook.com/rjannamiki.balaybay/</span></div>
+					<a href ="https://www.facebook.com/rjannamiki.balaybay/"target="_blank" >
+						<div><span>Facebook Messenger:</span><span></span>Rjanna Miki Balaybay</span></div>
 					</a>
 					
 					<a href ="https://cranberry101.github.io/Portfolio/Mytheme.html"target="_blank" >
